--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -23,7 +23,7 @@
 </div>
 
 <ion-content>
-  <div class="ion-padding" style="width: 100%">
+  <div class="ion-padding" style="width: 100%; overflow: overlay">
     <ngx-datatable
       class="material server-scrolling-demo"
       [limit]="8"
