Working on progress of testing the button component

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -104,4 +104,13 @@
       [enemiesTooltipText]="tooltipsTranslate.radioenemiesTooltipText"
     ></app-radio-buttons>
   </div>
+  <div class="ui-elements">
+    <h3>Button elements</h3>
+    <div style="background-color: #333333">
+      <app-standar-button
+        buttonText="Date"
+        (click)="addItem($event)"
+      ></app-standar-button>
+    </div>
+  </div>
 </ion-content>
