Adding disable button and making the clicked button looks good

--- a/src/app/component/standar-button/standar-button.component.html
+++ b/src/app/component/standar-button/standar-button.component.html
@@ -1,3 +1,9 @@
-<ion-button class="standar-button" (click)="clickButton($event)">{{
+<ion-button class="standar-button" (ionChange)="clickButton()">{{
   buttonText
 }}</ion-button>
+<ion-button
+  class="standar-button"
+  (click)="clickButton()"
+  [disabled]="disableButton"
+  >{{ buttonText }}</ion-button
+>
