--- a/src/app/component/standar-button/standar-button.component.css
+++ b/src/app/component/standar-button/standar-button.component.css
@@ -11,31 +11,23 @@ width: 98px;
 height: 28px;
 }
 
+
 ::ng-deep .standar-button:hover {
     --background: linear-gradient(128.11deg, #2D2E35 6.67%, #34393F 97.78%);
     --box-shadow: -3px -3px 9px #353B42, 1px 1px 5px #0D0E0F, inset 1px 1px 9px #2D2E35;
     --border-radius: 5px;
     }
-::ng-deep .standar-button:focus {
+::ng-deep .standar-button:active {
     --background: linear-gradient(128.11deg, #2D2E35 6.67%, #34393F 97.78%);
-    }
-
-/* ::ng-deep .hover-button {
-    --background: linear-gradient(128.11deg, #2D2E35 6.67%, #34393F 97.78%);
---box-shadow: -3px -3px 9px #353B42, 1px 1px 5px #0D0E0F, inset 1px 1px 9px #2D2E35;
---border-radius: 5px;
-}
-ion-button {
-    width: 98px;
-height: 28px;
+    filter: drop-shadow(0px 1px 1px rgba(255, 255, 255, 0.4));
+    --box-shadow: none;
 }
 
-::ng-deep .pressed-button {
---background: linear-gradient(128.11deg, #2D2E35 6.67%, #34393F 97.78%);
-border-radius: 5px;
-}
-::ng-deep .disable-button {
+.button-disabled {
     --background: linear-gradient(128.11deg, rgba(45, 46, 53, 0.5) 6.67%, rgba(52, 57, 63, 0.5) 97.78%);
-    --border: 0.3px solid #434549;
+--border: 0.3px solid #434549;
+--border-radius: 5px;
+color: #434549;
+cursor: not-allowed;
+
 }
-     */
