--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -114,6 +114,9 @@
       ></app-standar-button>
     </div>
   </div>
+  <div class="ui-elements">
+    <app-drop-down></app-drop-down>
+  </div>
 </ion-content>
 
 <!-- (ionFocus)="ionfocus($event)" -->
