working on progress with the dropdown

--- a/src/app/component/drop-down/drop-down.component.html
+++ b/src/app/component/drop-down/drop-down.component.html
@@ -1,4 +1,4 @@
-<ion-item>
+<!-- <ion-item>
   <ion-label>Categories</ion-label>
   <ion-select multiple="true" title="Categories">
     <ion-select-option value="bacon">Dailies</ion-select-option>
@@ -6,4 +6,29 @@
     <ion-select-option value="xcheese">Review</ion-select-option>
     <ion-select-option value="peppers">Export</ion-select-option>
   </ion-select>
-</ion-item>
+</ion-item> -->
+
+<ion-menu contentId="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu Content</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
+    <ion-menu-toggle>
+      <ion-button>Click to close the menu</ion-button>
+    </ion-menu-toggle>
+  </ion-content>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
+    <ion-menu-toggle>
+      <ion-button>Click to open the menu</ion-button>
+    </ion-menu-toggle>
+  </ion-content>
+</div>
