Working in progress of drop-down

--- a/src/app/component/drop-down/drop-down.component.html
+++ b/src/app/component/drop-down/drop-down.component.html
@@ -1,4 +1,4 @@
-<!-- <ion-item>
+<ion-item>
   <ion-label>Categories</ion-label>
   <ion-select multiple="true" title="Categories">
     <ion-select-option value="bacon">Dailies</ion-select-option>
@@ -6,9 +6,9 @@
     <ion-select-option value="xcheese">Review</ion-select-option>
     <ion-select-option value="peppers">Export</ion-select-option>
   </ion-select>
-</ion-item> -->
+</ion-item>
 
-<ion-menu contentId="main-content">
+<!-- <ion-menu contentId="main-content">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu Content</ion-title>
@@ -31,4 +31,4 @@
       <ion-button>Click to open the menu</ion-button>
     </ion-menu-toggle>
   </ion-content>
-</div>
+</div> -->
