--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -10,7 +10,7 @@
   [scrollEvents]="true"
   (ionScroll)="ionScrolling()"
 >
-  <div class="content">
+  <!-- <div class="content">
     <ion-title> date:17th and version:5</ion-title>
     <ion-list>
       <ion-item>
@@ -103,7 +103,7 @@
       [familyTooltipText]="tooltipsTranslate.radiofamilyTooltipText"
       [enemiesTooltipText]="tooltipsTranslate.radioenemiesTooltipText"
     ></app-radio-buttons>
-  </div>
+  </div> -->
   <div class="ui-elements">
     <h3>Button elements</h3>
     <div style="background-color: #2d2e35">
@@ -118,5 +118,3 @@
     <app-drop-down></app-drop-down>
   </div>
 </ion-content>
-
-<!-- (ionFocus)="ionfocus($event)" -->
