--- a/src/app/component/drop-down/drop-down.component.html
+++ b/src/app/component/drop-down/drop-down.component.html
@@ -1,23 +1,27 @@
-<ion-button id="hover-trigger">Categories</ion-button>
+<ion-button id="hover-trigger">Categories :</ion-button>
 <ion-popover trigger="hover-trigger" triggerAction="hover">
   <ng-template>
     <ion-content class="ion-padding">
       <ion-list>
         <a href="/"
-          ><ion-checkbox slot="start"></ion-checkbox> <span>Dailies</span></a
+          ><ion-checkbox slot="start"></ion-checkbox><span>Dailies</span></a
         >
       </ion-list>
       <ion-list>
         <a href="/">
           <ion-checkbox slot="start"></ion-checkbox>
-          Trascript
+          <span>Trascript</span>
         </a></ion-list
       >
       <ion-list>
-        <a href="/"><ion-checkbox slot="start"></ion-checkbox> Review </a>
+        <a href="/"
+          ><ion-checkbox slot="start"></ion-checkbox> <span>Review</span>
+        </a>
       </ion-list>
       <ion-list>
-        <a href="/"><ion-checkbox slot="start"> </ion-checkbox> Export</a>
+        <a href="/"
+          ><ion-checkbox slot="start"> </ion-checkbox><span>Export</span>
+        </a>
       </ion-list>
     </ion-content>
   </ng-template>
