--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -34,3 +34,11 @@ span {
         padding-top: 2rem;
     }
 }
+
+.checkbox-checked .checkbox-inner {
+    position: absolute;
+    top: 9px;
+    left: 13px;
+    height: 11px;
+    width: 5 px;
+}
