--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -51,14 +51,14 @@
         [prop]="column.name |lowercase"
         *ngFor="let column of columns"
         [minWidth]="column.minWidth"
-        [width]="column?.width"
+        [width]="column.width"
         [canAutoResize]="true"
         [flexGrow]="0"
-        id="class3"
+        id="{{column.name}}"
         [draggable]="true"
-        [canAutoResize]="true"
         style="overflow-y: auto"
       >
+        <!-- [canAutoResize]="false" -->
         <ng-template
           let-column="column"
           let-sort="sortFn"
