Adding functionality to make the image more responsive while resizing the row

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -106,6 +106,7 @@
               [attr.aria-label]="value"
               [src]="value"
               style="height: 100%; width: 100%"
+              [id]="rowIndex"
             />
           </div>
           <div *ngIf="column.name !== 'Image'">
