Adding some code removing the click event in the table content and testing the code

--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -148,7 +148,6 @@
     scroll-snap-type: x mandatory;
 }
 
-// .server-scrolling-demo {
-//     scroll-snap-type: x;
-// }
-// scroll-snap-type: none;
+textarea {
+    background-color: white;
+}
