--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -114,13 +114,10 @@
             />
           </div>
 
-          <div
-            *ngIf="column.name !== 'Image' && iosPlaform || mobilePlatforme ||
-          ipadPlatform "
-          >
+          <div *ngIf="column.name !== 'Image'">
             <div
               style="white-space: pre"
-              (click)="editing[rowIndex + '-' + column.name.toLowerCase()] = true"
+              (dblclick)="editing[rowIndex + '-' + column.name.toLowerCase()] = true"
               *ngIf="!editing[rowIndex + '-' + column.name | lowercase]"
               [attr.aria-label]="value"
               [draggable]="true"
@@ -137,7 +134,7 @@
             >
             </textarea>
           </div>
-          <div *ngIf="column.name !== 'Image' && desktopPlatforme">
+          <!-- <div *ngIf="column.name !== 'Image' && desktopPlatforme">
             <div
               style="white-space: pre"
               (dblclick)="editing[rowIndex + '-' + column.name.toLowerCase()] = true"
@@ -157,7 +154,7 @@
               [ngStyle]="{width:'100%', minHeight:'auto'}"
             >
             </textarea>
-          </div>
+          </div> -->
         </ng-template>
       </ngx-datatable-column>
     </ngx-datatable>
