trying to fix bug in the mac/chrome

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -131,6 +131,7 @@
               type="text"
               [value]="value"
               [ngStyle]="{width:'100%', minHeight:'auto'}"
+              ngClass="textarea_editing"
             >
             </textarea>
           </div>
