--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -132,7 +132,7 @@
               [value]="value"
               [ngStyle]="{width:'100%', minHeight:'auto'}"
             >
-            <!-- {{value}} -->
+            {{value}}
             </textarea>
           </div>
         </ng-template>
