--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -148,6 +148,6 @@
     scroll-snap-type: x mandatory;
 }
 
-// textarea {
-//     background-color: white;
-// }
+textarea {
+    background-color: white;
+}
