clean up code and add some changes

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -43,7 +43,6 @@
       cdkDropList
       cdkDropListOrientation="horizontal"
       (cdkDropListDropped)="drop($event)"
-      (scroll)="onChange($event)"
       id="container"
     >
       <ngx-datatable-column
@@ -118,7 +117,7 @@
             <div
               style="white-space: pre"
               (dblclick)="editing[rowIndex + '-' + column.name.toLowerCase()] = true"
-              (click)="clickMe(rowIndex, column.name.toLowerCase())"
+              (click)="onDoubleclick(rowIndex, column.name.toLowerCase())"
               *ngIf="!editing[rowIndex + '-' + column.name | lowercase]"
               [attr.aria-label]="value"
               [draggable]="true"
