Adding condition to fix the image width at the beginning(not tested yet)

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -50,7 +50,7 @@
         [prop]="column.name |lowercase"
         *ngFor="let column of columns"
         [minWidth]="column.minWidth"
-        [width]="column.width"
+        [width]="column.name === 'Image'&& imageWidth === undefined ? 277 :column.width"
         [canAutoResize]="true"
         [flexGrow]="0"
         id="{{column.name}}"
